@startuml
class oliot.lutemons.adapters.LutemonAdapter {
- ArrayList<Lutemon> lutemons
+ int getItemCount()
+ void updateLutemons(List<Lutemon>)
+ LutemonAdapter.ViewHolder onCreateViewHolder(ViewGroup,int)
+ void onBindViewHolder(ViewHolder,int)
}


class oliot.lutemons.adapters.LutemonAdapter$ViewHolder {
~ TextView nameView
~ ImageView imageView
~ Button trainButton
~ Button battleButton
~ Button homeButton
~ Button deteleLutemon
}

class oliot.lutemons.fragments.TrainingFragment {
- RecyclerView recyclerView
- TrainingAdapter adapter
- TextView noLutemonsMessage
+ View onCreateView(LayoutInflater,ViewGroup,Bundle)
}


class oliot.lutemons.fragments.LutemonListFragment {
- RecyclerView recyclerView
- LutemonAdapter lutemonAdapter
- ArrayList<Lutemon> lutemonList
- Button btnCreateLutemon
+ View onCreateView(LayoutInflater,ViewGroup,Bundle)
+ void onViewCreated(View,Bundle)
+ void loadLutemons()
+ void onResume()
}


class oliot.lutemons.adapters.StatsAdapter {
- ArrayList<Lutemon> lutemons
+ StatsAdapter.ViewHolder onCreateViewHolder(ViewGroup,int)
+ void onBindViewHolder(ViewHolder,int)
+ int getItemCount()
}


class oliot.lutemons.adapters.StatsAdapter$ViewHolder {
~ TextView nameView
~ ProgressBar expProgressBar
~ ImageView lutemonImage
}

class oliot.lutemons.fragments.CreateLutemonFragment {
- EditText editName
- RadioGroup radioGroupColor
- Button btnCreate
+ View onCreateView(LayoutInflater,ViewGroup,Bundle)
+ void onViewCreated(View,Bundle)
}


class oliot.lutemons.fragments.StatsFragment {
- RecyclerView statsRecyclerView
- StatsAdapter statsAdapter
- ArrayList<Lutemon> lutemons
+ View onCreateView(LayoutInflater,ViewGroup,Bundle)
}


class oliot.lutemons.fragments.BattleFragment {
+ {static} Lutemon playerLutemon
+ {static} Lutemon enemyLutemon
- TextView playerNameView
- TextView enemyNameView
- TextView playerRunsaway
- Button btnAttack
~ String playerOutcome
- TextView playerAttackLogView
- TextView enemyAttackLogView
- TextView weatherToday
- TextView gameWinner
- ImageView playerLutemonImage
- BattleManager battleManager
- WeatherManager weather
~ int expAward
+ View onCreateView(LayoutInflater,ViewGroup,Bundle)
+ void onViewCreated(View,Bundle)
- void updateUI()
+ void attackAnimation(ImageView,ImageView)
+ void playSounds(int)
}


class oliot.lutemons.fragments.HomeFragment {
- RecyclerView recyclerView
- LutemonAdapter adapter
- Button saveButton
+ View onCreateView(LayoutInflater,ViewGroup,Bundle)
}


class oliot.lutemons.adapters.TrainingAdapter {
- List<Lutemon> lutemons
- Map<Integer,CountDownTimer> timers
- Map<Integer,Long> remainingTime
+ ViewHolder onCreateViewHolder(ViewGroup,int)
+ void onBindViewHolder(ViewHolder,int)
+ int getItemCount()
- void startTraining(int)
}


class oliot.lutemons.adapters.TrainingAdapter$ViewHolder {
~ ImageView imageView
~ TextView nameView
~ Button trainButton
}



oliot.lutemons.adapters.Adapter <|-- oliot.lutemons.adapters.LutemonAdapter
oliot.lutemons.adapters.LutemonAdapter +.. oliot.lutemons.adapters.LutemonAdapter$ViewHolder
oliot.lutemons.adapters.ViewHolder <|-- oliot.lutemons.adapters.LutemonAdapter$ViewHolder
androidx.fragment.app.Fragment <|-- oliot.lutemons.fragments.TrainingFragment
androidx.fragment.app.Fragment <|-- oliot.lutemons.fragments.LutemonListFragment
oliot.lutemons.adapters.Adapter <|-- oliot.lutemons.adapters.StatsAdapter
oliot.lutemons.adapters.StatsAdapter +.. oliot.lutemons.adapters.StatsAdapter$ViewHolder
oliot.lutemons.adapters.ViewHolder <|-- oliot.lutemons.adapters.StatsAdapter$ViewHolder
androidx.fragment.app.Fragment <|-- oliot.lutemons.fragments.CreateLutemonFragment
androidx.fragment.app.Fragment <|-- oliot.lutemons.fragments.StatsFragment
androidx.fragment.app.Fragment <|-- oliot.lutemons.fragments.BattleFragment
androidx.fragment.app.Fragment <|-- oliot.lutemons.fragments.HomeFragment
oliot.lutemons.adapters.Adapter <|-- oliot.lutemons.adapters.TrainingAdapter
oliot.lutemons.adapters.TrainingAdapter +.. oliot.lutemons.adapters.TrainingAdapter$ViewHolder
oliot.lutemons.adapters.ViewHolder <|-- oliot.lutemons.adapters.TrainingAdapter$ViewHolder
@enduml